# holly_folder

./: #analytical_soln.cc#  #analytical_soln2.cc#  #code_no_FD.txt#  #flux_elements.h#  #one_d_act_inhibit.cc#  #save.txt#  #test.cc#  *scratch*  .#advection_diffusion_reaction_flux_elements.h  .#analytical_soln2.cc  .#bulk_elements.cc  .#bulk_elements.h  .#flux_elements.h  .#one_d_act_inhibit.cc  .gitignore  Makefile  Makefile.am  Makefile.in  README_PUNEET.md  VBE_demodriver.cc  advection_diffusion_reaction_flux_elements.h  advection_diffusion_reaction_flux_elements.h~  analytical_soln2  analytical_soln2.cc  bulk_elements.cc  bulk_elements.cc~  bulk_elements.h  bulk_elements.h~  code_no_FD.txt  flux_elements.h  flux_elements.h~  get_reaction_deriv_adv_react.cc  helpu.sh  import_oomph_C_and_T.m  import_oomph_results.m  imported_variables.mat  initial.vtu  initial_mesh.vtu  one_d_act_inhibit.cc  one_d_act_inhibit.sh  (+21 more)
.deps/: one_d_act_inhibit.Po  one_d_act_inhibit.Tpo  test.Po
RESLT/: get_results.m  initial_mesh.vtu  step10.vtu  step100.vtu  step1000.vtu  step1001.vtu  step1002.vtu  step1003.vtu  step1004.vtu  step1005.vtu  step1006.vtu  step1007.vtu  step1008.vtu  step1009.vtu  step101.vtu  step1010.vtu  step1011.vtu  step1012.vtu  step1013.vtu  step1014.vtu  step1015.vtu  step1016.vtu  step1017.vtu  step1018.vtu  step1019.vtu  step102.vtu  step1020.vtu  step1021.vtu  step1022.vtu  step1023.vtu  step1024.vtu  step1025.vtu  step1026.vtu  step1027.vtu  step1028.vtu  step1029.vtu  step103.vtu  step1030.vtu  step1031.vtu  step1032.vtu  (+1961 more)
RESLT_FAST_DIFFUSION/: step10.vtu  (+670 more)
(+36129 files in other folders)
